Fazendo nav links e fix dos requisito article e aside.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned on Trybe</h1>
+        <nav>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/igormriegel/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/igmriegel" target="_blank">Git Hub</a></li>
+                <li><a href="https://igmriegel.github.io/" target="_blank">My portfolio</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
-        <a href="https://www.linkedin.com/in/igormriegel/" target="_blank">LinkedIn</a>
+        
         <section>
             <article>
                 <h2>O que aprendi na Trybe...</h2>
