--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </nav>
     </header>
     <main>
-        <img id="minha_foto" src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli">
+        <div>
+            <img id="minha_foto" src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli">
+        </div>
             <div class="tabela">
                 <table>
                     <tr>
@@ -31,7 +33,6 @@
                     </tr>
                 </table>
             </div>
-        <div>
     </main>
     <div class="listas">
         <h3>Lições aprendidas</h3>
