--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
         </nav>
     </header>
     <main>
+        <figure>
+            <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
+            <figcaption>Nathália Veneziano</figcaption>
+        </figure>
         <section>
-            <figure>
-                <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
-                <figcaption>Nathália Veneziano</figcaption>
-            </figure>
-        </section>
-        <section>
+            <h1>Lições Aprendidas</h1>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Git</li>
@@ -43,6 +42,7 @@
             </ol>
         </section>
         <section>
+            <h1>Lições a Aprender</h1>
             <ul id="licoes_a_aprender">
                 <li>JavaScript</li>
                 <li>DOM</li>
@@ -71,22 +71,24 @@
                 </tr>
             </table>
         </section>
-        <article class="lado-esquerdo">
-            <h2>Sobre Meu Aprendizado</h2>
-            <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os
-                conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML,
-                é
-                possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e
-                conhecer
-                melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo
-                numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
-        </article>
-        <aside class="lado-direito">
-            <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as
-                ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades
-                que
-                enfrentaremos num dia-a-dia de trabalho.</p>
-        </aside>
+        <div id="coluna-2">
+            <article class="lado-esquerdo">
+                <h2>Sobre Meu Aprendizado</h2>
+                <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os
+                    conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML,
+                    é
+                    possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e
+                    conhecer
+                    melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo
+                    numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
+            </article>
+            <aside class="lado-direito">
+                <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as
+                    ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades
+                    que
+                    enfrentaremos num dia-a-dia de trabalho.</p>
+            </aside>
+        </div>
     </main>
     <footer id="rodape">
         <p>Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a></p>
