--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lições aprendidas Trybe</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
+
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Projeto desenvolvimento Trybe</h1>
@@ -19,20 +22,20 @@
         <div>
             <img id="minha_foto" src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli">
         </div>
-            <div class="tabela">
-                <table>
-                    <tr>
-                        <td>Nome</td>
-                        <td>Idade</td>
-                        <td>Profissão</td>
-                    </tr>
-                    <tr>
-                        <td>Pedro</td>
-                        <td>20</td>
-                        <td>Estudante</td>
-                    </tr>
-                </table>
-            </div>
+        <div class="tabela">
+            <table>
+                <tr>
+                    <td>Nome</td>
+                    <td>Idade</td>
+                    <td>Profissão</td>
+                </tr>
+                <tr>
+                    <td>Pedro</td>
+                    <td>20</td>
+                    <td>Estudante</td>
+                </tr>
+            </table>
+        </div>
     </main>
     <div class="listas">
         <h3>Lições aprendidas</h3>
@@ -72,19 +75,24 @@
         <article>
             <div class="aprendizado">
                 <h1>Meu aprendizado ate aqui</h1>
-                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto meus colegas ja fizeram templates absurdos. <br> O que mais me deixa feliz é que estou tendo a oportunidade de melhorar sempre.</p>
+                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda
+                    fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto
+                    meus colegas ja fizeram templates absurdos. <br> O que mais me deixa feliz é que estou tendo a
+                    oportunidade de melhorar sempre.</p>
             </div>
         </article>
-            <aside>
-                <div class="caminhada">
-                    <h1>Meu trajeto até aqui</h1>
-                    <p>Bom, esse é literalmente meu primeiro contato com a programação, estou gostando muito, porem fico chateado quando nao consigo algo simples. Mas no fim tudo da certo.</p>
-                </div>
-            </aside>
+        <aside>
+            <div class="caminhada">
+                <h1>Meu trajeto até aqui</h1>
+                <p>Bom, esse é literalmente meu primeiro contato com a programação, estou gostando muito, porem fico
+                    chateado quando nao consigo algo simples. Mas no fim tudo da certo.</p>
+            </div>
+        </aside>
     </section>
     <footer id="rodape">
         <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
         <a target="_blank" href="https://linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
     </footer>
 </body>
+
 </html>
