--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
  <section id="conteudo_extra">
         <aside id="licoes">
             <h4>Aprendizados além - Empatia</h4>
-            <p>No ambiente corporativo, saber projetar a personalidade de alguém para que seja possível se identificar
-             com o outro e compreender o que este pensa e sente é uma virtude que contribui com a gestão de equipes e influencia positivamente o clima organizacional.</p>
+            <p>No ambiente corporativo, saber projetar a personalidade de alguém para que seja possível se identificar com o outro e compreender o que este pensa e sente é uma virtude que contribui com a gestão de equipes e influencia positivamente o clima organizacional.</p>
         </aside>
  </section>
  <footer id="rodape">
