--- a/index.html
+++ b/index.html
@@ -30,22 +30,51 @@
           <li>Slack</li>
           <li>Semantic HTML</li>
         </ol>
-        <ol id="licoes_a_aprender">
-          <li>10 licoes_a_aprender</li>
-          <li>9 licoes_a_aprender</li>
-          <li>8 licoes_a_aprender</li>
-          <li>7 licoes_a_aprender</li>
-          <li>6 licoes_a_aprender</li>
-          <li>5 licoes_a_aprender</li>
-          <li>4 licoes_a_aprender</li>
-          <li>3 licoes_a_aprender</li>
-          <li>2 licoes_a_aprender</li>
-          <li>1 licoes_a_aprender</li>
+        <ol id="licoes_a_aprender"><p><h1>Licoes a Aprender</h1></p>
+          <li>Forms</li>
+          <li>Flexbox</li>
+          <li>Responsivo</li>
+          <li>Js ES6</li>
+          <li>Jest</li>
+          <li>React</li>
+          <li>React Testing Library</li>
+          <li>Redux</li>
+          <li>API</li>
+          <li>React Hooks</li>
         </ol>
       </section>
       <section>
-        <article id="artigo">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
+        <article id="artigo"><h1>Como Acontece?</h1><p> the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.</p>
         </article>
+        <article id="artigo2"><h1>Meu Aprendizado</h1><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+        </article>
+      </section>
+      <section>
+        <table id="tabela"><p><h1 id="titletable">Quanto eu Aprendi?</h1></p><p><tr>
+          <th>Desenvolvimento Web</th>
+          <th>%</th>
+        </tr>
+        <tr>
+          <td>Unix, Bash</td>
+          <td>70%</td>
+        </tr>
+        <tr>
+          <td>Git, GitHub</td>
+          <td>80%</td>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>90%</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>30%</td>
+        </tr>
+        <tr>
+          <td>Js</td>
+          <td>1%</td>
+        </tr></p>
+        </table>
       </section>
     </main>
   <footer>
