--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
     </main>
     <aside>
       <h2 class="sub_title arct_posit">Aprendizados</h2>
-      <section class="lado-direito">Comecei primeiramente a entender sobre linux e Unix, logo após
-        Entendi mais sobre como funciona a web por baixo dos panos. No outro dia
+      <section class="lado-direito">Comecei com linux e Unix, logo após
+        Entendi sobre como funciona a web. No outro dia
         Aprendi conceitos sobre git alem de github. Tive tambem uma breve introdução sobre HTML com apresentação de
-        algumas tags além de uma
-        introdução sobre CSS. Após isso e por utimo aprendi sobre os conceitos de HTML semântico
+        algumas tags além de CSS. Por utimo aprendi sobre os conceitos de HTML semântico
       </section>
     </aside>
   </div>
