Correção - HTML Acessível

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <figcaption>Nathália Veneziano</figcaption>
         </figure>
         <section>
-            <h1>Lições Aprendidas</h1>
+            <h2>Lições Aprendidas</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Git</li>
@@ -42,7 +42,7 @@
             </ol>
         </section>
         <section>
-            <h1>Lições a Aprender</h1>
+            <h2>Lições a Aprender</h2>
             <ul id="licoes_a_aprender">
                 <li>JavaScript</li>
                 <li>DOM</li>
@@ -56,7 +56,7 @@
                 <li>SQL</li>
             </ul>
         </section>
-        <section>
+        <div>
             <table>
                 <tr>
                     <th colspan="2">Conteúdo Estudado na Trybe</th>
@@ -70,7 +70,7 @@
                     <td><strong>Bloco 4: Introdução à JavaScript e Lógica de Programação</strong></td>
                 </tr>
             </table>
-        </section>
+        </div>
         <div id="coluna-2">
             <article class="lado-esquerdo">
                 <h2>Sobre Meu Aprendizado</h2>
