--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8"/>
   <link rel="stylesheet" href="style.css">
+  <title>Primeiro projeto</title>
   </head>
     <body>
       <header id="cabecalho">
