--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
     </main>
     <aside>
       <h2 class="sub_title arct_posit">Aprendizados</h2>
-      <section class="lado-direito">Comecei com linux e Unix, logo após
-        Entendi sobre como funciona a web. No outro dia
-        Aprendi conceitos sobre git alem de github. Tive tambem uma breve introdução sobre HTML com apresentação de
-        algumas tags além de CSS. Por utimo aprendi sobre os conceitos de HTML semântico
+      <section class="lado-direito">Comecei com linux e Unix, logo após web. No outro dia
+        Aprendi conceitos sobre git e github. Tive introdução sobre HTML e CSS.
+        Por utimo aprendi sobre os conceitos de HTML semântico
       </section>
     </aside>
   </div>
