--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <table id="table">
                 <tr>
                     <th>Nome:</th>
-                    <td>Gabriel <span class="highlight-word">Gal</span>dino</td>
+                    <td>Gabriel <span class="word">Gal</span>dino</td>
                 </tr>
                 <tr>
                     <th>Idade:</th>
@@ -38,24 +38,21 @@
                 </tr>
             </table>
             <h2>Trajetória - <em>A New Hope</em></h2>
-            <article id="lado-esquerdo">
-                <p>
-                    <span id="sw">Numa galáxia não muito distante...</span><br><br>
+            <article class="lado-esquerdo">
+                <p><span id="sw">Numa galáxia não muito distante...</span><br><br>
                     Lá estava eu, começando meus estudos no curso, com um baita aperto no coração
-                    me perguntando: "Será que sou capaz?" "Vou dar conta disso?" <br>
+                    me perguntando: "Será que vou dar conta?"<br>
                     E eu só tenho a agrader por todo o suporte que a TRYBE dá para seus alunos, pois
-                    eles te deixam com a sensação de que você é capaz de tudo! <br><br>
+                    eles te deixam com a sensação de que você é capaz de tudo!<br><br>
                     Desde como usar o Terminal até o ponto que estamos, a experiência tem sido incrível.
                     <br><br>
                     Tamo junto galera! <strong>#VQV</strong>
                 </p>
             </article>
-            <aside id="lado-direito">
-                <p>
-                    <span class="highlight-word">FUN FACT:</span><br><br>
-                    Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09, meu
-                    Lubuntu decidiu não funcionar e tive criar outro pendrive com Ubuntu e formatar
-                    o notebook nesse meio tempo. Pensa na adrenalina...
+            <aside class="lado-direito">
+                <p><span class="word">FUN FACT:</span><br><br>
+                    Faltando 40 minutos pro 1º dia de reunião da Turma 09, meu Lubuntu decidiu não funcionar
+                    e tive que criar outro pendrive com Ubuntu e formatar o notebook nesse meio tempo. Pensa na adrenalina...
                 </p>
             </aside>
         </div>
@@ -89,8 +86,8 @@
         </section>
     </main>
     <footer id="rodape">
-        Webiste desenvolvido por <span class="highlight-word">Gabriel Galdino</span> como projeto do curso Desenvolvimento Web Full-Stack.
-        Todos os direitos reservados <span class="highlight-word">©</span>.
+        Webiste desenvolvido por <span class="word">Gabriel Galdino</span> como projeto do curso Desenvolvimento Web Full-Stack.
+        Todos os direitos reservados <span class="word">©</span>.
     </footer>
 </body>
 </html>
