--- a/index.html
+++ b/index.html
@@ -13,45 +13,64 @@
         </header>
         <aside id="sidebar">
             <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
-            <h2>Pamela Anderson Sales</h5>
-            <nav id="navigation">
-                <a href="#licoes_aprendidas">Lições aprendidas.</a><br>
-                <a href="#licoes_a_aprender">Lições a aprender.</a><br>
+            <h2 class="caption">Pamela Anderson Sales</h2>
+            <nav id="navigation"><h3 class="side-titles">Menu</h3>
+                <div class="menu1"><a href="#licoes_aprendidas">Lições aprendidas</a></div><br>
+                <span class="menu2"><a href="#licoes_a_aprender">Lições a aprender</a></span><br>
             </nav>
-            <h3>A Trybe e seu espírito de colaboração</h3>
+            <h3 class="side-titles">A Trybe e seu espírito de colaboração</h3>
             <section class="side-article"><em>"A Trybe se preocupa com as Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário."</em>
             </section>
         </aside>
         <div id="wrap">
             <main>
-                <ol id="licoes_aprendidas"><h2>Lições aprendidas:</h2>
-                    <li>Fundamentos do Desenvolvimento Web</li>
-                    <li>Unix & Shell</li>
-                    <li>Bash</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Internet: Como ela funciona</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>HTML & CSS: Seletores e Posicionamento</li>
-                    <li>HMLT Semantico</li>
-                </ol>
-                <ul id="licoes_a_aprender"><h2>Lições a aprender:</h2>
-                    <li>JavaScript</li>
-                    <li>CSS Responsivo</li>
-                    <li>Jest</li>
-                    <li>React</li>
-                    <li>RTL</li>
-                    <li>Metodologias Ageis</li>
-                    <li>SQL</li>
-                    <li>Normalização e Modelagem de Banco de Dados</li>
-                    <li>MongoDB</li>
-                    <li>NodeJS</li>
-                </ul>
+                <div class="lado-esquerdo">
+                    <ol id="licoes_aprendidas"><h2 class="titles">Lições aprendidas:</h2>
+                        <li>Fundamentos do Desenvolvimento Web</li>
+                        <li>Unix & Shell</li>
+                        <li>Bash</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>Internet: Como ela funciona</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>HTML & CSS: Seletores e Posicionamento</li>
+                        <li>HMLT Semantico</li>
+                    </ol>
+                </div>
+                <div class="lado-direito">
+                    <ul id="licoes_a_aprender"><h2 class="titles">Lições a aprender:</h2>
+                        <li>JavaScript</li>
+                        <li>CSS Responsivo</li>
+                        <li>Jest</li>
+                        <li>React</li>
+                        <li>RTL</li>
+                        <li>Metodologias Ageis</li>
+                        <li>SQL</li>
+                        <li>Normalização e Modelagem de Banco de Dados</li>
+                        <li>MongoDB</li>
+                        <li>NodeJS</li>
+                    </ul>
+                </div>
                 <article>
-                    <h3>Meu aprendizado na Trybe</h3>
-                    <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Mal posso esperar para aprender e evoluir mais na carreira de Desenvolvimento de Softwares. Confira mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
+                    <h3 class="titles">Meu aprendizado na Trybe</h3>
+                    <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Mal posso esperar para aprender e evoluir mais na carreira de Desenvolvimento de Softwares. Confira mais sobre o curriculo da Trybe clicando nesse <a class="external-link" href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
                 </article>
+                <table>
+                    <caption class="titles">Tabela de evolução do meu aprendizado na Trybe.</caption>
+                    <tr>
+                        <th>Fundamentos do Desenvolvimento Web</th>
+                        <th>Desenvolvimento Front-end</th>
+                        <th>Desenvolvimento Back-end</th>
+                        <th>Introdução à Ciência da Computação</th>
+                    </tr>
+                    <tr>
+                        <td>Em progresso</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                    </tr>
+                </table>
             </main>
         </div>
         <footer id="rodape">
