Correção - HTML Acessível

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </tr>
             </table>
         </div>
-        <!-- <div id="coluna-2"> -->
+        <section>
             <article class="lado-esquerdo">
                 <h2>Sobre Meu Aprendizado</h2>
                 <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os
@@ -88,7 +88,7 @@
                     que
                     enfrentaremos num dia-a-dia de trabalho.</p>
             </aside>
-        <!-- </div> -->
+        </section>
     </main>
     <footer id="rodape">
         <p>Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a></p>
