--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  </main>
  <section id="conteudo_extra">
         <aside id="licoes">
-            <p>No ambiente corporativo, saber projetar a personalidade de alguém para que seja possível se identificar com o outro e compreender o que este pensa e sente é uma virtude que contribui com a gestão de equipes e influencia positivamente o clima organizacional.</p>
+            <p><strong>A Empatia: </strong> no ambiente corporativo, saber projetar a personalidade de alguém para que seja possível se identificar com o outro e compreender o que este pensa e sente é uma virtude que contribui com a gestão de equipes e influencia positivamente o clima organizacional.</p>
         </aside>
  </section>
  <footer id="rodape">
