--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li>React</li>
             <li>Node</li>
         </ul>
-        <footer id="rodape"><h6>rodapé</h6></footer>
+        <footer id="rodape"><a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=CjwKCAiAnvj9BRA4EiwAuUMDf0Yx__uSRhyFf2ullTXp64HxKy8o68Nh3UFR5EVgLPURCsf8phV94xoCJXoQAvD_BwE"
+            target="blank" class="link"><h3>Faça parte deste time</h3></a></footer>
     </body>
 </html>
