--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
         
         <section>
-            <article>
+            <article class="lado-direito">
                 <h2>O que aprendi na Trybe...</h2>
                 <p>
-                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.  
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.
                 </p>
             </article>
-            <aside>
+            <aside class="lado-esquerdo">
                 <h2>Algo legal sobre aprendizagem</h2>
                 <p>
-                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separ.
-                coast of the Semantics, a large language ocean. A small river named Duden flows by their place.
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separ. coast of the Semantics, a large language ocean. A small river named Duden flows by their place.
+                </p>
             </aside>
         </section>
         <section>
