--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <section><h1 id="titulo">Lessons Learned</h1></section></header>
     <main>
         <aside id="passagem">
-          <div class="side">
-          <p><img src="eu.jpg" alt="Minha Foto" id="minha_foto"></p>
+          <div class="side"><!--
+          <p><img src="eu.jpg" alt="Minha Foto" id="minha_foto"></p>-->
           <p id="textside"><p><h2 id="sobre_meu_aprendizado">Sobre Meu aprendizado</h2></p><p> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
             </p>
           </div>
