--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 </head>
 
 <body>
-    <header id="cabecalho">
-        <h2 id="titulo">Projeto desenvolvimento Trybe</h2>
-        <nav class="navegacao">
-            <a href="#header">Home</a>
-            <a target="_blank" href="https://linkedin.com/in/pedrotoselli">Linkedin</a>
-        </nav>
+    <header>
+        <div id="cabecalho">
+            <div id="titulo">
+                <h1>Projeto desenvolvimento trybe</h1>
+            </div>
+        </div>
+        <div>
+            <nav class="navegacao">
+                <a href="#header">Home</a>
+                <a target="_blank" href="https://linkedin.com/in/pedrotoselli">Linkedin</a>
+            </nav>
+        </div>
     </header>
     <main>
         <div>
@@ -36,7 +42,7 @@
         </div>
     </main>
     <div class="listas">
-        <h3>Lições aprendidas</h3>
+        <h2>Lições aprendidas</h2>
         <div class="lista-ordenada">
             <ol id="licoes_aprendidas">
                 <li>HTML</li>
@@ -72,7 +78,7 @@
     <section class="artigo">
         <article>
             <div class="aprendizado">
-                <h1>Meu aprendizado ate aqui</h1>
+                <h4>Meu aprendizado ate aqui</h4>
                 <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda
                     fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto
                     meus colegas ja fizeram templates absurdos. <br> O que mais me deixa feliz é que estou tendo a
@@ -81,7 +87,7 @@
         </article>
         <aside>
             <div class="caminhada">
-                <h1>Meu trajeto até aqui</h1>
+                <h5>Meu trajeto até aqui</h5>
                 <p>Bom, esse é literalmente meu primeiro contato com a programação, estou gostando muito, porem fico
                     chateado quando nao consigo algo simples. Mas no fim tudo da certo.</p>
             </div>
