Estrutura do Requesito 4 - Tentativa 1

--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
                 </p>
             </aside>
         </section>
+        <section class="secao-listas">
+            <div class="box-lista">
+                <h2 class="titulo-article linha-fina green">Lições aprendidas</h2>
+                <ol id="licoes_aprendidas" class="list">
+                    <li><a href="">Unix</a></li>
+                    <li><a href="">Bash</a></li>
+                    <li><a href="">Git</a></li>
+                    <li><a href="">Github</a></li>
+                    <li><a href="">Zoom</a></li>
+                    <li><a href="">Internet</a></li>
+                    <li><a href="">Html</a></li>
+                    <li><a href="">Css</a></li>
+                    <li><a href="">Empatia</a></li>
+                    <li><a href="">Slack</a></li>
+                </ol>
+            </div>
+        </section>
     </main>
 </body>
 </html>
