Fixes section's character number

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         </header>
         <aside id="sidebar">
             <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
-            <h2 class="caption">Pamela Anderson Sales</h2>
+            <h2 class="caption">Pamela Sales</h2>
             <nav id="navigation"><h3 class="side-titles">Menu</h3>
                 <div class="menu1"><a href="#licoes_aprendidas">Lições aprendidas</a></div><br>
                 <span class="menu2"><a href="#licoes_a_aprender">Lições a aprender</a></span><br>
             </nav>
-            <h3 class="side-titles">A Trybe e seu espírito de colaboração</h3>
-            <section class="side-article"><em>"A Trybe se preocupa com as Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário."</em>
+            <h3 class="side-titles">Espírito de colaboração</h3>
+            <section class="side-article"><em>"A Trybe se preocupa com as Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo."</em>
             </section>
         </aside>
         <div id="wrap">
