--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <body>
       <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - TRYBE</h1>
+        <nav id="navigation">
+          <ul>
+            <li><a href="#">Página inicial</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </nav>
       </header>
       <section id="section-foto">
         <img id="minha_foto" src="me.png" alt="Igor Machado"/>
