corrige algums erros e troca a imagem da logo do instagram

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="">Contato</a></li>
                 </ul>
             </nav>
-            <img id="minha_foto"src="Minha_Foto.jpg"alt="Uma foto minha">
+            <img id="minha_foto" src="Minha_Foto.jpg" alt="Uma foto minha">
             <h2>Lista de lições</h2>
             <ol id="licoes_aprendidas" class="lado-esquerdo">
                 <li>Unix</li>
@@ -53,8 +53,8 @@
             <footer id="rodape">
                 <p>
                     Informacoes para contato:<br>
-                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank"><img id="linkedin" src="Linkedin-Symbol.png" alt="A picture of linkedin logo"></a>
-                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="768px-Instagram_logo_2016.svg.webp" alt="A picture of Instagram logo"></a>
+                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank"><img id="linkedin" src="Linkedin-Symbol.png" alt="Foto da logo do Linkedin"></a>
+                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram" src="logo-instagram-png-fundo-transparente.png" alt="Foto da logo do Instagram"></a>
                 </p>
             </footer>
         </main>
