--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div id="cabecalho">
             <div id="titulo">
-                <h1>Projeto desenvolvimento trybe</h1>
+                <h1 id="titulo">Projeto desenvolvimento trybe</h1>
             </div>
         </div>
         <div>
