Correção - HTML Acessível

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </nav>
     </header>
     <main>
-        <figure>
+        <!-- <figure> -->
             <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
-            <figcaption>Nathália Veneziano</figcaption>
-        </figure>
+            <!-- <figcaption>Nathália Veneziano</figcaption> -->
+        <!-- </figure> -->
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
