Estrutura do Requesito 5 - Tentativa 1

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </aside>
         </section>
         <section class="secao-listas">
-            <div class="box-lista">
-                <h2 class="titulo-article linha-fina green">Lições aprendidas</h2>
+            <nav class="box-lista">
+                <h2 class="titulo-article linha-fina green-color">Lições aprendidas</h2>
                 <ol id="licoes_aprendidas" class="list">
                     <li><a href="">Unix</a></li>
                     <li><a href="">Bash</a></li>
@@ -46,7 +46,22 @@
                     <li><a href="">Empatia</a></li>
                     <li><a href="">Slack</a></li>
                 </ol>
-            </div>
+            </nav>
+            <nav class="box-lista">
+                <h2 class="titulo-article linha-fina gray-color">Lições a aprender</h2>
+                <ul id="licoes_a_aprender">
+                    <li><a href="">JavaScript</a></li>
+                    <li><a href="">NodeJs</a></li>
+                    <li><a href="">React</a></li>
+                    <li><a href="">Forms</a></li>
+                    <li><a href="">DOM</a></li>
+                    <li><a href="">SQL</a></li>
+                    <li><a href="">Express.js</a></li>
+                    <li><a href="">ES6</a></li>
+                    <li><a href="">Responsive</a></li>
+                    <li><a href="">Unit Test</a></li>
+                </ul>
+            </nav>
         </section>
     </main>
 </body>
