--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <header>
         <div id="cabecalho">
-            <div id="titulo">
+            <div>
                 <h1 id="titulo">Projeto desenvolvimento trybe</h1>
+                <h1>Pedo Toselli</h1>
             </div>
         </div>
         <div>
