modificado article meu aprendizado

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           <aside id="aside">
             <p>
               A passagem que chama a minha atenção é de inteligência emocial.
+              professores que sabem dar uma aula acima da espectativa.
           </aside>
         </section>
       </main>
