Correção - HTML Acessível

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </nav>
     </header>
     <main>
-        <!-- <figure> -->
+        <figure>
             <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
-            <!-- <figcaption>Nathália Veneziano</figcaption> -->
-        <!-- </figure> -->
+            <figcaption>Nathália Veneziano</figcaption>
+        </figure>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
@@ -64,7 +64,7 @@
             </tr>
         </table>
         <article class="lado-esquerdo">
-            <h2>Sobre Meu Aprendizado</h2>
+            <!-- <h2>Sobre Meu Aprendizado</h2> -->
             <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os
                 conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é
                 possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer
