--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
       </article>
     </section>
     </main>
+    <footer id="rodape">
+      <p>© André Chiapetta 2020.</p>
+    </footer>
 </body>
 </html>
