--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         
     </main>
     <section id="artigo_barra_lateral">
-        <article id="artigo_aprendizado">
+        <article class="lado-esquerdo">
             <h2 class="titulos">Conteudo Aprendido</h2>
             <p>Falando de maneira mais detalhada sobre a aprendizagem até aqui, iniciamos com muita <strong>softskill</strong>, desenvolvendo essa habilidade em grupo. Iniciamos o aprendizado em <strong>hardskill</strong> entendendo como funciona a arquitetura do unix e seus principai comandos, iniciamos o aprendizado em git e github, entendendo a diferença entre eles e como esse trabalham em conjunto. E finalmente chegamos ao momento tão esperado, colocar a mão no código, com Html e CSS iniciamos nossos primeiros conteudos de aprendizado rumo a formação fullstack desenvolvimento web.  </p>
         </article> 
-        <aside id="experiencia">
-            <p>"Os primeiros dias na trybe foram incriveis. toda a receptividade, o ambiente, a facilidade em se comunicar. Não tenho duvida alguma de que foi a melhor decisão que já tomei na vida...já se passaram 3 semanas e a cada dia que passa o sentimento é realmente de ter feito a excolha certa"
+        <aside class="lado-direito">
+            <p>"Os primeiros dias na trybe foram incriveis. toda a receptividade, o ambiente, a facilidade em se comunicar. Não tenho duvida alguma de que foi a melhor decisão que já tomei na vida.já se passaram 3 semanas e a cada dia que passa o sentimento é realmente de ter feito a excolha certa"
             </p>
         </aside>
     </section>
