--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div id="cabecalho">
             <div>
-                <h1 id="titulo">Projeto desenvolvimento trybe</h1>
-                <h1>Pedo Toselli</h1>
+                <h1 id="titulo">Projeto desenvolvimento</h1>
+                <h2>Trybe</h2>
             </div>
         </div>
         <div>
