Arruma o erro do Cypress

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="">Contato</a></li>
                 </ul>
             </nav>
-            
+            <img id="minha_foto" src="Minha_Foto.jpg" alt="Uma foto minha">
             <h2>Lista de lições</h2>
             <ol id="licoes_aprendidas" class="lado-esquerdo">
                 <li>Unix</li>
@@ -51,7 +51,11 @@
                 <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
             </aside>
             <footer id="rodape">
-              
+                <p>
+                    Informacoes para contato:<br>
+                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/khyrki/" target="_blank">Instagram</a>
+                </p>
             </footer>
         </main>
     </body>
