adicionado lado-direito e lado-esquerdo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <main id="content">
         <section id="main-content">
           <h2 id="licoes">Lições</h2>
-          <ol id="licoes_aprendidas">
+          <ol class="lado-direito" id="licoes_aprendidas">
             <li>Empatia</li>
             <li>Trabalhar em grupo</li>
             <li>Bash e Linux</li>
@@ -37,7 +37,7 @@
             <li>Criar e administrar Github</li>
           </ol>
 
-          <ul id="licoes_a_aprender">
+          <ul  class="lado-esquerdo" id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>React JS</li>
             <li>Back End</li>
@@ -52,7 +52,7 @@
         </section>
 
         <section id="section-article">
-          <article id="article">
+          <article class="lado-direito" id="article">
             <h2>Meu aprendizado na Trybe</h2>
             <p>Estou a pouco tempo, porém o curso é muito bom.
               
@@ -60,7 +60,7 @@
           </article>
         </section>
 
-        <section id="section-aside">
+        <section class="lado-esquerdo" id="section-aside">
           <h2>Uma passagem sobre o meu aprendizado</h2>
           <aside id="aside">
             <p>
