Adiciona foto, corrige posicionamento de elementos

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 
 <header id="cabecalho">
+  <img id="minha_foto" src="Luciano Lodi.jpg" alt="foto de Luciano">
   <h1 id="titulo">Lessons Learned</h1>
   <h2 id="titulo">LUCIANO LODI</h2>
 </header>
 
 
 
-<body class="align-main">
-  <!--    <img id="minha_foto" src="Luciano Lodi.jpg" alt="foto de Luciano"> -->
+<body>
 
-    <section class="lado-esquerdo ">
+  <main class="align-main">
+
+    <section class="lado-esquerdo">
 
       <ol id="licoes_aprendidas"> <h2>O QUE APRENDI:</h2>
         <li>Unix</li>
@@ -49,15 +51,11 @@
         <li>Sotaque mineiro</li>
       </ul>
       <br>
-      <table align="center">
+      <table id="table">
         <tr></tr>
         <td>#</td>
         <td>#</td>
         <td>#</td>
-        <td>_</td>
-        <td>_</td>
-        <td>_</td>
-        <td>_</td>
         <td>_</td>
         <td>_</td>
         <td>_</td>
@@ -70,9 +68,6 @@
         <td>I</td>
         <td>N</td>
         <td>G</td>
-        <td>_</td>
-        <td>_</td>
-        <td>_</td>
         <td>_</td>
         <td>_</td>
         <td>_</td>
@@ -95,8 +90,9 @@
         </p> 
     
       </article>
-    </section>
 
+    </section>
+  </main>
   <aside id="aside">
     <h3>O QUE HÁ ALÉM DO CONHECIMENTO TÉCNICO</h3>
     <p>
