--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <aside>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ultrices enim et pretium. Nulla facilisi. Etiam sed pharetra elit.
     </aside>
-    <section>
+    <!--<section>-->
+        <p>Lições</p>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Terminal Linux</li>
@@ -72,7 +73,7 @@
                 <td>Ipsum</td>
             </tr>
           </table>
-    </section>
+    <!--</section>-->
     <footer id="rodape">
         <a href="https://www.linkedin.com/in/danrlley-rodrigues/" target="_blank">
         LinkedIn
