Estilizaçao do - Requesito 4 e 5

--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
         </section>
         <section class="secao-listas">
             <nav class="box-lista">
-                <h2 class="titulo-article linha-fina green-color">Lições aprendidas</h2>
+                <h2 class="green-color">Lições aprendidas</h2>
                 <ol id="licoes_aprendidas" class="list">
-                    <li><a href="">Unix</a></li>
-                    <li><a href="">Bash</a></li>
-                    <li><a href="">Git</a></li>
-                    <li><a href="">Github</a></li>
-                    <li><a href="">Zoom</a></li>
-                    <li><a href="">Internet</a></li>
-                    <li><a href="">Html</a></li>
-                    <li><a href="">Css</a></li>
-                    <li><a href="">Empatia</a></li>
-                    <li><a href="">Slack</a></li>
+                    <a href=""><li>Unix</li></a>
+                    <a href=""><li>Bash</li></a>
+                    <a href=""><li>Git</li></a>
+                    <a href=""><li>Github</li></a>
+                    <a href=""><li>Zoom</li></a>
+                    <a href=""><li>Internet</li></a>
+                    <a href=""><li>Html</li></a>
+                    <a href=""><li>Css</li></a>
+                    <a href=""><li>Empatia</li></a>
+                    <a href=""><li>Slack</li></a>
                 </ol>
             </nav>
             <nav class="box-lista">
-                <h2 class="titulo-article linha-fina gray-color">Lições a aprender</h2>
-                <ul id="licoes_a_aprender">
+                <h2 class="gray-color">Lições a aprender</h2>
+                <ul id="licoes_a_aprender" class="list">
                     <li><a href="">JavaScript</a></li>
                     <li><a href="">NodeJs</a></li>
                     <li><a href="">React</a></li>
