--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
-        
         <section>
             <article class="lado-direito">
                 <h2>O que aprendi na Trybe...</h2>
@@ -32,7 +32,8 @@
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separ. coast of the Semantics, a large language ocean. A small river named Duden flows by their place.</p>
             </aside>
         </section>
-        <section>
+
+        <section class="lado-direito">
             <h2>Lições aprendidas na Trybe:</h2>
             <ol id="licoes_aprendidas">
                 <li>Como operar o shell</li>
@@ -48,7 +49,7 @@
             </ol>
         </section>
 
-        <section>
+        <section class="lado-esquerdo">
             <h2>Lições que ainda vou aprender:</h2>
             <Ul id="licoes_a_aprender">
                 <li>Lógica de programação</li>
