Correção - HTML Acessível

--- a/index.html
+++ b/index.html
@@ -26,18 +26,21 @@
             <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
             <figcaption>Nathália Veneziano</figcaption>
         </figure>
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Empatia</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inteligência Emocional</li>
-            <li>Soft Skills</li>
-        </ol>
+        <section>
+            <h2>Lições Aprendidas</h2>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inteligência Emocional</li>
+                <li>Soft Skills</li>
+            </ol>
+        </section>
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>DOM</li>
