Criando meu artigo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
         </ul>
       </article>
     </section>
-    </main>
+    <article>
+      <h2>Meu querido aprendizado</h2>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+         Lorem Ipsum has been the industry's standard dummy text ever since the 1500sLorem
+         Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+         has been the industry's standard dummy text ever since the 1500sLorem Ipsum is
+         simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+         the industry's standard dummy text ever since the 1500s.
+        </p>
+    </article>
+  </main>
     <footer id="rodape">
       <p>© André Chiapetta 2020.</p>
     </footer>
