Ajustando tamanho do texto

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>Falando de maneira mais detalhada sobre a aprendizagem até aqui, iniciamos com muita <strong>softskill</strong>, desenvolvendo essa habilidade em grupo. Iniciamos o aprendizado em <strong>hardskill</strong> entendendo como funciona a arquitetura do unix e seus principai comandos, iniciamos o aprendizado em git e github, entendendo a diferença entre eles e como esse trabalham em conjunto. E finalmente chegamos ao momento tão esperado, colocar a mão no código, com Html e CSS iniciamos nossos primeiros conteudos de aprendizado rumo a formação fullstack desenvolvimento web.  </p>
         </article> 
         <aside class="lado-direito">
-            <p>"Os primeiros dias na trybe foram incriveis. toda a receptividade, o ambiente, a facilidade em se comunicar. Não tenho duvida alguma de que foi a melhor decisão que já tomei na vida.já se passaram 3 semanas e a cada dia que passa o sentimento é realmente de ter feito a excolha certa"</p>
+            <p>"Os primeiros dias na trybe foram incriveis. toda a receptividade, o ambiente, a facilidade em se comunicar. Não tenho duvida alguma de que foi a melhor decisão que já tomei na vida.já se passaram 3 semanas o sentimento é realmente de ter feito a ecolha certa"</p>
         </aside>
     </section>
     <footer id="rodape">
