--- a/index.html
+++ b/index.html
@@ -10,5 +10,30 @@
         <header id="cabecalho">
             <h1 id="titulo">João Pedro Barros</h1>
         </header>
+        <img src="/images/WhatsApp Image 2020-11-10 at 14.10.49.jpeg" alt="Foto de João Pedro Barros sorrindo" id="minha_foto">
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Auto Controle</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+        <ul>
+            <li>Javascript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
     </body>
 </html>
