--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header>
-        <div id="cabecalho">
+    <header id="cabecalho">
+        <div>
             <div>
                 <h1 id="titulo">Projeto desenvolvimento</h1>
             </div>
