Atera css do article e do aside

--- a/index.html
+++ b/index.html
@@ -43,17 +43,19 @@
                 <li>Mongo</li>
                 <li>NodeJS</li>
             </ul>
+            <section>
             <article id="artigo">
                 <h2>Meu Aprendizado</h2>
                 <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado. </p>
             </article>
-            <aside id="secao">
+            <aside id="aside">
                 <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
             </aside>
+            </section>
             <footer id="rodape">
                 <p>
                     Informacoes para contato:<br>
-                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank">Instagram</a>
+                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank">LinkedIn</a><br>
                     <a href="https://www.instagram.com/khyrki/" target="_blank">Instagram</a>
                 </p>
             </footer>
