--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
   </head>
     <body>
       <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas - TRYBE</h1>
-        <nav id="navigation">
-          <ul>
-            <li><a href="#">Página inicial</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
-        </nav>
+        <h1 id="titulo">Lições aprendidas - TRYBE</h1>   
       </header>
       <section id="section-foto">
         <img id="minha_foto" src="me.png" alt="Igor Machado"/>
@@ -24,7 +17,7 @@
       <main id="content">
         <section id="main-content">
           <h2 id="licoes">Lições</h2>
-          <ol class="lado-direito" id="licoes_aprendidas">
+          <ol id="licoes_aprendidas">
             <li>Empatia</li>
             <li>Trabalhar em grupo</li>
             <li>Bash e Linux</li>
@@ -37,7 +30,7 @@
             <li>Criar e administrar Github</li>
           </ol>
 
-          <ul  class="lado-esquerdo" id="licoes_a_aprender">
+          <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>React JS</li>
             <li>Back End</li>
@@ -54,7 +47,10 @@
         <section id="section-article">
           <article class="lado-direito" id="article">
             <h2>Meu aprendizado na Trybe</h2>
-            <p>Estou a pouco tempo, porém o curso é muito bom.
+            <p>Estou a pouco tempo , porém o curso é muito bom. Oferencedo uma excelente didática
+              professores que sabem dar uma aula acima da espectativa. Com isso o aprendizado se torna
+              agradável e com progressos significativos. Com menos de um mês já estou fazendo o meu primeiro
+              projeto. Espero em breve ser um excelente Dev FullStack. Em 2021 serei finalmente um DEV. 
               
             </p>
           </article>
@@ -68,6 +64,7 @@
               professores que sabem dar uma aula acima da espectativa.
           </aside>
         </section>
+       
       </main>
       <footer id="rodape">
         <p>Todos direitos reservados, Igor Machado</p>
