Correção - HTML Acessível

--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
                 <li>Soft Skills</li>
             </ol>
         </section>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>Python</li>
-            <li>Agoritmos</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
+        <section>
+            <h2>Lições a Aprender</h2>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>Python</li>
+                <li>Agoritmos</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </section>
         <table>
             <tr>
                 <th colspan="2">Conteúdo Trybe</th>
